--- a/Flies/Flies.csproj
+++ b/Flies/Flies.csproj
@@ -142,7 +142,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Fly.png">
+    <Resource Include="Resources\snek.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
